K8sPoc.WebApi/kube-ingress.yaml

# helm upgrade --install ingress-nginx ingress-nginx --repo https://kubernetes.github.io/ingress-nginx --namespace ingress-nginx --create-namespace
# kubectl apply -f kube-ingress.yaml
# Get-AksEdgeNodeAddr -NodeType Linux
# kubectl get services --all-namespaces

# netsh interface portproxy add v4tov4 listenport=8080 listenaddress=192.168.137.90 connectport=30529 connectaddress=192.168.0.2
# netsh interface portproxy add v4tov4 listenport=8443 listenaddress=192.168.137.90 connectport=31839 connectaddress=192.168.0.2

# netsh interface portproxy delete v4tov4 listenport=8080 listenaddress=192.168.137.90 
# New-NetFirewallRule -DisplayName "inbound-aks-web-port" -Direction Inbound -LocalPort 32262 -Protocol TCP -Action Allow

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Write forward everything after the /webapi prefix to the backend.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      #  Regex for path.  We're looking to pass everything after the /webapi prefix.
      - path: /webapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            #  Target backend service.
            name: k8spoc-webapi
            #  Target port.  This is our default ASP.NET 8080 port.
            port:
              number: 8080
